init: support symlink creation

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -24,6 +24,9 @@ device_manager.path = /initrd/drivers/device-manager
 ## The directories are created in the order they are specified in the file.
 mkdir = /sys
 
+## Symbolic links
+symlink = /lib /initrd/lib
+
 ## Mount configuration
 ##
 ## The mountpoints are mounted in the order they are specified in the file.
