initrd: add symlinks to /initrd/{bin,etc}

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -25,6 +25,8 @@ device_manager.path = /initrd/drivers/device-manager
 mkdir = /sys
 
 ## Symbolic links
+symlink = /bin /initrd/bin
+symlink = /etc /initrd/etc
 symlink = /lib /initrd/lib
 
 ## Mount configuration
