vfs/syscall refactor, x86 stacktrace update, errno support, unit test update
vfs functions now returns errnos, e.g. -ENOENT on error. thus those
system calls now returning longs instead of bools, corresponding kernel
space callers are too adapted.

mounting and unmounting rootfs is now supported, with a simple unit test
to make sure we don't break anything.

dentry reference is now 'more correct' (TM), fixed several flaws where
refs are not decremented when resolving symlinks, also took care of cwd
when forking.

rewritten the whole unit test logging system so that they directy utilises
printk infrastructure, no need to call console APIs directly anymore.

for x86, the stack trace now provides more information for userspace
instruction pointers, with corresponding vmap_t's file name and offset.

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -55,6 +55,10 @@ config MM_DETAILED_UNHANDLED_FAULT
     bool "print detailed information for unhandled page fault"
     default n
 
+config ELF_INTERPRETER_BASE_OFFSET
+    hex "elf interpreter base offset"
+    default 0x100000
+
 # ! ============================================================
 
 menu "Kernel Debugging Options"
@@ -126,7 +130,6 @@ config DEBUG_dcache
 
 config DEBUG_dcache_ref
     bool "dcache_ref debugging"
-    select DEBUG_dcache
 
 config DEBUG_tmpfs
     bool "tmpfs debugging"
