--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(fork)
 add_subdirectory(librpc)
 add_subdirectory(ipc)
 add_subdirectory(cxx)
+add_subdirectory(libstdcxx)
 
 add_subdirectory(libc-test)
 add_simple_rust_project("${CMAKE_CURRENT_LIST_DIR}/rust-test" rust-test "/tests/")
