clocksource: add x86 RTC clocksource support

--- a/arch/x86_64/CMakeLists.txt
+++ b/arch/x86_64/CMakeLists.txt
@@ -15,6 +15,7 @@ add_kernel_source(
         acpi/madt.c
         devices/serial.c
         devices/serial_console.c
+        devices/rtc.c
         descriptors/descriptors.c
         interrupt/lapic.c
         interrupt/ioapic.c
