userspace: add environ decl, switch spawn to fork+execve, kdebug fixes, add clear to lazybox

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -15,3 +15,4 @@ lazybox_program(stat "Display file or file system status")
 lazybox_program(touch "Change file timestamps")
 lazybox_program(tree "List contents of directories in a tree-like format")
 lazybox_program(true "Do nothing, successfully")
+lazybox_program(clear "Clear the terminal screen")
