initrd: add /etc/passwd

--- a/userspace/initrd/CMakeLists.txt
+++ b/userspace/initrd/CMakeLists.txt
@@ -2,5 +2,6 @@
 
 add_to_initrd(DIRECTORY assets  /assets)
 add_to_initrd(DIRECTORY config  /config)
+add_to_initrd(DIRECTORY etc  /etc)
 add_to_initrd(FILE README.txt /)
 add_to_initrd(FILE "${CMAKE_BINARY_DIR}/summary.txt" /)
