smp/infra: add timestamp, datetime, cpuid to lprintk_wrapper

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -39,6 +39,18 @@ config STACK_PAGES_USER
     int "Number of pages for user stack"
     default 32
 
+config PRINTK_WITH_TIMESTAMP
+    bool "Include timestamp in debug messages"
+    default n
+
+config PRINTK_WITH_DATETIME
+    bool "Include date and time in debug messages"
+    default n
+
+config PRINTK_WITH_CPU_ID
+    bool "Include CPU ID in debug messages"
+    default n
+
 config PRINTK_WITH_FILENAME
     bool "filename in debug messages"
     default n
