libargparse: support hosted userspace solib

--- a/userspace/libs/argparse/CMakeLists.txt
+++ b/userspace/libs/argparse/CMakeLists.txt
@@ -1,6 +1,12 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_library(argparse libargparse.c)
-target_include_directories(argparse PUBLIC SYSTEM ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(argparse PUBLIC mos::stdlib)
-add_library(mos::argparse ALIAS argparse)
+add_mos_library(
+    NAME argparse
+    SOURCES
+        libargparse.c
+    PUBLIC_INCLUDE_DIRECTORIES
+        ${CMAKE_CURRENT_LIST_DIR}/include
+    USERSPACE_ONLY
+)
+
+add_to_initrd(TARGET argparse_hosted /lib/)
