userspace: port some userspace binaries to hosted libc

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -27,7 +27,7 @@ mkdir = /sys
 ## Symbolic links
 symlink = /bin /initrd/bin
 symlink = /etc /initrd/etc
-symlink = /lib /initrd/lib
+# symlink = /lib /initrd/lib ; kernel handles this
 
 ## Mount configuration
 ##
