--- a/userspace/programs/2048/CMakeLists.txt
+++ b/userspace/programs/2048/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(2048 main.c)
-setup_userspace_program(2048 /games "The 2048 game")
-
+target_link_libraries(2048 PRIVATE mos::include)
+add_to_initrd(TARGET 2048 /games)
