--- a/userspace/libs/libconfig/CMakeLists.txt
+++ b/userspace/libs/libconfig/CMakeLists.txt
@@ -1,6 +1,12 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_library(libconfig STATIC libconfig.c)
-target_include_directories(libconfig PUBLIC SYSTEM ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(libconfig PUBLIC mos::stdlib)
-add_library(mos::libconfig ALIAS libconfig)
+add_mos_library(
+    NAME libconfig
+    SOURCES
+        libconfig.c
+    PUBLIC_INCLUDE_DIRECTORIES
+        ${CMAKE_CURRENT_LIST_DIR}/include
+    USERSPACE_ONLY
+)
+
+add_to_initrd(TARGET libconfig_hosted /lib/)
