userspace: port more programs/libraries, refine libreadline

--- a/userspace/libs/readline/CMakeLists.txt
+++ b/userspace/libs/readline/CMakeLists.txt
@@ -1,6 +1,13 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_library(readline libreadline.c)
-target_include_directories(readline PUBLIC SYSTEM ${CMAKE_CURRENT_LIST_DIR}/include)
-target_link_libraries(readline PUBLIC mos::stdlib)
-add_library(mos::readline ALIAS readline)
+add_mos_library(
+    NAME libreadline
+    SOURCES
+        libreadline.c
+    PUBLIC_INCLUDE_DIRECTORIES
+        ${CMAKE_CURRENT_LIST_DIR}/include
+    USERSPACE_ONLY
+    HOSTED_ONLY
+)
+
+add_to_initrd(TARGET libreadline_hosted /lib/)
