--- a/userspace/programs/kdebug/CMakeLists.txt
+++ b/userspace/programs/kdebug/CMakeLists.txt
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(kdebug main.c)
-target_link_libraries(kdebug PRIVATE mos::readline)
-
-setup_userspace_program(kdebug /programs "Debug kernel parameters")
+target_link_libraries(kdebug PRIVATE mos::include mos::libreadline_hosted)
+add_to_initrd(TARGET kdebug /programs)
