pci: rename pci_daemon -> pci-daemon

--- a/userspace/drivers/pci-daemon/CMakeLists.txt
+++ b/userspace/drivers/pci-daemon/CMakeLists.txt
@@ -1,16 +1,17 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 if (NOT MOS_ARCH STREQUAL "x86_64")
+    message(WARNING "PCI daemon is only supported on x86_64")
     return()
 endif()
 
-add_executable(pci_daemon
+add_executable(pci-daemon
     main.c
     pci_scan.c
     known_devices.c
 )
 
-target_link_libraries(pci_daemon PRIVATE mos::stdlib mos::private_include librpc::client)
-target_link_libraries(pci_daemon PRIVATE device-manager::client)
+target_link_libraries(pci-daemon PRIVATE mos::stdlib mos::private_include librpc::client)
+target_link_libraries(pci-daemon PRIVATE device-manager::client)
 
-setup_userspace_program(pci_daemon /drivers "x86 PCI driver")
+setup_userspace_program(pci-daemon /drivers "x86 PCI driver")
