--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,28 +2,6 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "compile_x86_64_uefi",
-            "type": "shell",
-            "options": { "cwd": "${workspaceFolder}/build" },
-            "command": "cmake --build ${workspaceFolder}/build --target mos_uefi_loader mos_uefi_entry mos_userspace_programs mos_initrd",
-            "group": "build",
-            "presentation": {
-                "reveal": "silent",
-                // "close": true
-            }
-        },
-        {
-            "label": "compile_uefi_loader",
-            "type": "shell",
-            "options": { "cwd": "${workspaceFolder}/build" },
-            "command": "cmake --build ${workspaceFolder}/build --target mos_uefi_loader",
-            "group": "build",
-            "presentation": {
-                "reveal": "silent",
-                // "close": true
-            }
-        },
-        {
             "label": "compile_mos_limine",
             "type": "shell",
             "options": { "cwd": "${workspaceFolder}/build" },
@@ -75,7 +53,9 @@
                 "-cdrom",
                 "${workspaceFolder}/build/boot.dir/mos_limine.iso",
                 "-smp",
-                "1",
+                "2",
+                "-cpu",
+                "max",
             ],
             "problemMatcher": [ ],
             "group": "none",
@@ -100,85 +80,6 @@
                 "${workspaceFolder}/.github/workflows/Doxyfile"
             ],
             "problemMatcher": [ ]
-        },
-        {
-            "label": "start_uefi_loader",
-            "type": "process",
-            "command": "tmux",
-            "options": {
-                "cwd": "${workspaceFolder}/build",
-            },
-            "args": [
-                "new",
-                "-s",
-                "mos_kernel_debug",
-                "-d",
-                "uefi-run",
-                "-b",
-                "/usr/share/edk2/x64/OVMF.fd",
-                "${workspaceFolder}/build/tools/uefi_bootloader/mos_uefi_loader.efi",
-                "--",
-                "-m",
-                "16G",
-                "-chardev",
-                "stdio,id=serial_log,logfile=serial_log.log,signal=off",
-                "-serial",
-                "chardev:serial_log",
-                "-display",
-                "gtk,show-tabs=on",
-                "-s",
-                "-S",
-            ],
-            "problemMatcher": [ ],
-            "group": "none",
-            "dependsOn": [
-                "kill_mos",
-                "compile_uefi_loader"
-            ],
-        },
-        {
-            "label": "start_os_x86_64_uefi",
-            "type": "process",
-            "command": "tmux",
-            "options": {
-                "cwd": "${workspaceFolder}/build",
-            },
-            "args": [
-                "new",
-                "-s",
-                "mos_kernel_debug",
-                "-d",
-                "uefi-run",
-                "-f",
-                "${workspaceFolder}/build/boot.dir/mos_uefi_entry:mos_kernel.elf",
-                "-f",
-                "/dev/null:mos_cmdline.txt",
-                "-b",
-                "/usr/share/edk2/x64/OVMF.fd",
-                "${workspaceFolder}/build/tools/uefi_bootloader/mos_uefi_loader.efi",
-                "--",
-                "-m",
-                "16G",
-                "-chardev",
-                "stdio,id=serial_log,logfile=serial_log.log,signal=off",
-                "-serial",
-                "chardev:serial_log",
-                "-display",
-                "gtk,show-tabs=on",
-                "-s",
-                "-S",
-            ],
-            "problemMatcher": [ ],
-            "group": "none",
-            "dependsOn": [
-                "kill_mos",
-                "compile_x86_64_uefi"
-            ],
-            "presentation": {
-                "reveal": "silent",
-                "close": true
-            },
-            "detail": "Start MOS and wait for the debugger to connect."
         },
     ]
 }
