kernel/mm: support allocating DMA memory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,26 +36,21 @@
                 "mos_kernel_debug",
                 "-d",
                 "qemu-system-x86_64",
-                "-m",
-                "2G",
-                "-display",
-                "gtk,show-tabs=on",
-                "-d",
-                "int,cpu_reset,guest_errors",
-                "-D",
-                "qemu_err.log",
+                "-m", "60G",
+                "-machine", "q35",
+                "-display", "gtk,show-tabs=on",
+                "-d", "cpu_reset,guest_errors",
+                "-D", "qemu_err.log",
                 "-s",
                 "-S",
-                "-chardev",
-                "stdio,id=serial_log,logfile=serial_log.log,signal=off",
-                "-serial",
-                "chardev:serial_log",
-                "-cdrom",
-                "${workspaceFolder}/build/boot.dir/mos_limine.iso",
-                "-smp",
-                "2",
-                "-cpu",
-                "max",
+                "-chardev", "stdio,id=serial_log,logfile=serial_log.log,signal=off",
+                "-serial", "chardev:serial_log",
+                "-cdrom", "${workspaceFolder}/build/boot.dir/mos_limine.iso",
+                "-smp", "1",
+                "-cpu", "max",
+                "-drive", "file=${workspaceFolder}/build/disk.img,format=raw,if=virtio", // using virtio
+                "-device", "virtio-gpu-pci",
+                "-vga", "none",
             ],
             "problemMatcher": [ ],
             "group": "none",
