userspace: add simple virtio drivers for GPU & blockdev

--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -3,3 +3,12 @@
 add_subdirectory(acpi-daemon)
 add_subdirectory(device-manager)
 add_subdirectory(pci-daemon)
+
+add_subdirectory(libdma)
+
+add_simple_rust_project(
+    "${CMAKE_CURRENT_LIST_DIR}/virtiod"
+    virtiod
+    "/drivers/"
+    DEPENDS dma_hosted
+)
