--- a/userspace/initrd/config/dm.conf
+++ b/userspace/initrd/config/dm.conf
@@ -8,12 +8,13 @@
 ## Drivers configuration
 ## The drivers are loaded in the order they are specified in the file.
 ## The drivers listed below are always loaded regardless of the platform support.
-# load = /initrd/drivers/pci_daemon
+# load = /initrd/drivers/pci-daemon
 
 ## Device - Driver mapping
 ## The device driver mapping is specified in the following format:
 ## <device> = <driver>
-## The device is specified in the format <bus>:<device>:<function>
+## The device is specified in the format <vendor>[:<device>[:<subsystem>]]
 ## The driver is specified as the path to the driver binary.
 
 ## PCI devices
+1af4 = /initrd/drivers/virtiod
