--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(libstdcxx)
 add_subdirectory(libc-test)
 add_simple_rust_project("${CMAKE_CURRENT_LIST_DIR}/rust-test" rust-test "/tests/")
 add_subdirectory(signal)
+add_subdirectory(pipe-test)
 
 add_executable(test-launcher test-main.c)
 setup_userspace_program(test-launcher /tests "Userspace test launcher")
