--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -89,6 +89,10 @@ config ELF_INTERPRETER_BASE_OFFSET
     hex "elf interpreter base offset"
     default 0x100000
 
+config UBSAN
+    bool "enable undefined behavior sanitizer"
+    default n
+
 # ! ============================================================
 
 menu "Kernel Debugging Options"
