x86: also register a COM2 console

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,9 @@
                 "-s",
                 "-S",
                 "-chardev", "stdio,id=serial_log,logfile=serial_log.log,signal=off",
+                "-chardev", "file,id=serial-com2,path=serial-com2.log",
                 "-serial", "chardev:serial_log",
+                "-serial", "chardev:serial-com2",
                 "-cdrom", "${workspaceFolder}/build/boot.dir/mos_limine.iso",
                 "-smp", "1",
                 "-cpu", "max",
