misc: add missing SPDX-License-Identifier

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-Licnse-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 # Standard libraries, with some data structures
 add_subdirectory(stdlib)
