--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,6 +3,8 @@
 # Standard libraries, with some data structures
 add_subdirectory(stdlib)
 
+add_subdirectory(nanopb)
+
 # IPC and RPC libraries
 add_subdirectory(libipc)
 add_subdirectory(librpc)
