--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "userspace/drivers/acpi-daemon/lai"]
 	path = userspace/drivers/acpi-daemon/lai
 	url = https://github.com/managarm/lai
+[submodule "libs/nanopb/nanopb"]
+	path = libs/nanopb/nanopb
+	url = https://github.com/nanopb/nanopb
