--- a/arch/x86_64/boot/limine/CMakeLists.txt
+++ b/arch/x86_64/boot/limine/CMakeLists.txt
@@ -34,8 +34,8 @@ add_custom_target(mos_limine_iso
     COMMAND ${CMAKE_COMMAND} -E make_directory ${LIMINE_BOOT_DIR}
     COMMAND ${CMAKE_COMMAND} -E copy ${LIMINE_ROOT}/limine-bios.sys ${LIMINE_ROOT}/limine-bios-cd.bin ${LIMINE_BOOT_DIR}/
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:mos_limine> ${CMAKE_BINARY_DIR}/initrd.cpio ${CMAKE_CURRENT_LIST_DIR}/limine.cfg ${LIMINE_BOOT_DIR}/
-    COMMAND ${XORRISO} -as mkisofs -b limine-bios-cd.bin -no-emul-boot -boot-load-size 4 -boot-info-table --protective-msdos-label ${LIMINE_BOOT_DIR} -o ${BOOT_DIR}/mos_limine.iso
-    COMMAND ${LIMINE_BIN} bios-install ${BOOT_DIR}/mos_limine.iso
+    COMMAND ${XORRISO} -as mkisofs -b limine-bios-cd.bin -no-emul-boot -boot-load-size 4 -boot-info-table --protective-msdos-label ${LIMINE_BOOT_DIR} -o ${BOOT_DIR}/mos_limine.iso > xorriso.log 2>&1
+    COMMAND ${LIMINE_BIN} bios-install ${BOOT_DIR}/mos_limine.iso > limine.log 2>&1
     BYPRODUCTS
         ${BOOT_DIR}/mos_limine.iso
 
