--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -23,6 +23,7 @@ device_manager.path = /initrd/drivers/device-manager
 ## Filesystems configuration
 ## The directories are created in the order they are specified in the file.
 mkdir = /sys
+mkdir = /test-initrd
 
 ## Symbolic links
 symlink = /bin /initrd/bin
@@ -47,3 +48,4 @@ symlink = /etc /initrd/etc
 ## This is done by the kernel, and cannot be changed in this file.
 ##
 mount = none /sys sysfs defaults
+mount = none /test-initrd userfs.cpiofs defaults
