--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -57,7 +57,7 @@ jobs:
     steps:
       - name: Install packages
         run: |
-          pacman -Syu --noconfirm base-devel git nasm mtools jq ninja qemu-system-x86 gnu-efi cpio wget unzip cmake limine
+          pacman -Syu --noconfirm base-devel git nasm mtools jq ninja qemu-system-x86 gnu-efi cpio wget unzip cmake limine protobuf python-protobuf python-setuptools
 
       - uses: actions/checkout@v3
         with:
