--- a/userspace/libs/CMakeLists.txt
+++ b/userspace/libs/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(readline)
 add_to_initrd(TARGET libipc_hosted /lib)
 add_to_initrd(TARGET librpc-client_hosted /lib)
 add_to_initrd(TARGET librpc-server_hosted /lib)
+add_to_initrd(TARGET nanopb_hosted /lib)
