initrd: link /include so that gcc can find requred headers

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -28,6 +28,8 @@ mkdir = /test-initrd
 ## Symbolic links
 symlink = /bin /initrd/bin
 symlink = /etc /initrd/etc
+symlink = /include /initrd/include
+
 # symlink = /lib /initrd/lib ; kernel handles this
 
 ## Mount configuration
