blockdev-manager: init

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -51,3 +51,16 @@ symlink = /include /initrd/include
 ##
 mount = none /sys sysfs defaults
 mount = none /test-initrd userfs.cpiofs defaults
+
+## Load Services
+##
+## The services are loaded in the order they are specified in the file.
+##
+## Format:
+##     service = <Path>
+##
+## Path: the path to the service executable
+## Args: the arguments to the service executable
+##
+
+service = /initrd/drivers/blockdev-manager
