--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -1,6 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_subdirectory(acpi-daemon)
+
+add_subdirectory(blockdev-manager)
+
 add_subdirectory(device-manager)
 add_subdirectory(pci-daemon)
 
