init.conf: start ramdisk automatically

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -64,3 +64,4 @@ mount = none /test-initrd userfs.cpiofs defaults
 ##
 
 service = /initrd/drivers/blockdev-manager
+service = /initrd/programs/ramdisk
