cmake: separate kernel CFLAGS and userspace/global CFLAGS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ if ("${MOS_UBSAN}" STREQUAL "y")
     target_compile_options(mos_kernel_compile_options INTERFACE -g -fsanitize=undefined)
     target_link_options(mos_kernel_compile_options INTERFACE -g -fsanitize=undefined)
 endif()
-target_compile_options(mos_kernel_compile_options INTERFACE -ffreestanding ${MOS_KERNEL_CFLAGS})
+target_compile_options(mos_kernel_compile_options INTERFACE $<$<COMPILE_LANGUAGE:C>:${MOS_KERNEL_CFLAGS}>)
 target_compile_definitions(mos_kernel_compile_options INTERFACE -D__MOS_KERNEL__ -D__MLIBC_ABI_ONLY)
 target_link_options(mos_kernel_compile_options INTERFACE -nostdlib)
 target_link_libraries(mos_kernel_compile_options INTERFACE mos::include mos::private_include gcc)
